@@ -2890,8 +2890,12 @@ Redirect =
         "http://fuuka.warosu.org/#{board}/#{mode}/#{id}"
       when 'diy', 'g', 'k', 'sci'
         "https://archive.installgentoo.net/#{board}/#{mode}/#{id}"
+      when 'cgl', 'mu', 'w'
+        "http://archive.rebeccablacktech.com/#{board}/#{mode}/#{id}"
       when 'x'
         "http://archive.xfiles.to/#{board}/#{mode}/#{id}"
+      when 'e'
+        "https://md401.homelinux.net/4chan/cgi-board.pl/#{board}/#{mode}/#{id}"
       else
         if mode is 'thread'
           "//boards.4chan.org/#{board}/"
