@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Add /cgl/, /e/, /mu/ and /w/ archive redirection.
 
 3.9.2
 - Mayhem
